Update Trip Type classification.ipynb

--- a/Trip Type classification.ipynb
+++ b/Trip Type classification.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This competition is part of the practice work for the subject called 'Aprendizaje Supervisado' of the edition 2020  Diplodatos . \n",
-    "This is a simplified version of the competition for recruiting done by Walmart in the plataform Kaggle (Walmart Recruiting: Trip Type Classification).\n",
+    "This competition is part of the practice work for the subject called 'Aprendizaje Supervisado' of the edition 2020  Diplodatos : https://www.kaggle.com/c/supervisado2020/overview. \n",
+    "This is a simplified version of the competition for recruiting done by Walmart in the plataform Kaggle (Walmart Recruiting: Trip Type Classification:https://www.kaggle.com/c/walmart-recruiting-trip-type-classification/overview).\n",
     "The goal is try to predict the trip types of purchases into the supermarket made by costomers. These types are codified in the original dataset.\n"
    ]
   },
