test description change

--- a/Trip Type classification.ipynb
+++ b/Trip Type classification.ipynb
@@ -50,7 +50,7 @@
     "Create a function to load the datasets.\n",
     "\n",
     "**Some important decisions made here**:\n",
-    "1. We used one hot encoding for Weekday and DepartmentDescription. But, we didn't add an aditional column for the NaN values. All transformations are applied to the training and testing datasets...\n",
+    "1. We used one hot encoding for Weekday. DepartmentDescription is weighted encoded based on the scan count of the products.  We didn't add an aditional column for the NaN values. All transformations are applied to the training and testing datasets...\n",
     "1. We dropped NaN values, only in the training dataset, and we could see that it's better for our model. \n",
     "1. We didn't drop the Upc and FinelineNumber to simplify the process, and we didn't use one hot encoding for that columns, the model went better when we just used those columns as a number."
    ]
@@ -1472,9 +1472,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
