--- a/Trip Type classification.ipynb
+++ b/Trip Type classification.ipynb
@@ -49,10 +49,88 @@
    "source": [
     "Create a function to load the datasets.\n",
     "\n",
-    "**Some important decisions made here**:\n",
-    "1. We used one hot encoding for Weekday. DepartmentDescription is weighted encoded based on the scan count of the products.  We didn't add an aditional column for the NaN values. All transformations are applied to the training and testing datasets...\n",
+    "**We present two models**\n",
+    "\n",
+    "*First one*\n",
+    "1. We used one hot encoding for Weekday and DepartmentDescription.  We didn't add an aditional column for the NaN values. All transformations are applied to the training and testing datasets...\n",
     "1. We dropped NaN values, only in the training dataset, and we could see that it's better for our model. \n",
     "1. We didn't drop the Upc and FinelineNumber to simplify the process, and we didn't use one hot encoding for that columns, the model went better when we just used those columns as a number. Median value of Upc per department category is used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a function to load the datasets.\n",
+    "\n",
+    "**We present two models**\n",
+    "\n",
+    "*First one*\n",
+    "1. We used one hot encoding for Weekday  DepartmentDescription is weighted encoded based on the scan count of the products.  We didn't add an aditional column for the NaN values. All transformations are applied to the training and testing datasets...\n",
+    "1. We dropped NaN values, only in the training dataset, and we could see that it's better for our model. \n",
+    "1. We didn't drop the Upc and FinelineNumber to simplify the process, and we didn't use one hot encoding for that columns, the model went better when we just used those columns as a number. Median value of Upc per department category is used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_data(train_data_fname, test_data_fname):\n",
+    "    df_train = pd.read_csv(train_data_fname)\n",
+    "    df_train['is_train_set'] = 1\n",
+    "    df_test = pd.read_csv(test_data_fname)\n",
+    "    df_test['is_train_set'] = 0\n",
+    "\n",
+    "    # we  get the TripType for the train set. To do that, we group by VisitNumber and\n",
+    "    # then we get the max (or min or avg)\n",
+    "    y = df_train.groupby([\"VisitNumber\", \"Weekday\"], as_index=False).max().TripType\n",
+    "    \n",
+    "    # we remove the TripType now, and concat training and testing data\n",
+    "    # the concat is done so that we have the same columns for both datasets\n",
+    "    # after one-hot encoding\n",
+    "    df_train = df_train.drop(\"TripType\", axis=1)\n",
+    "    df = pd.concat([df_train, df_test])\n",
+    "    \n",
+    "    # we drop Upc to add a median value later\n",
+    "    df = df.fillna(0)\n",
+    "    df_aux = df.drop([\"ScanCount\", \"DepartmentDescription\", \"is_train_set\"], axis=1)\n",
+    "    extra = df_aux.groupby([\"VisitNumber\", \"Weekday\"], as_index=False).median()\n",
+    "    df = df.drop([\"Upc\"], axis=1)\n",
+    "\n",
+    "\n",
+    "    # one-hot encoding for the DepartmentDescription    \n",
+    "    df = pd.get_dummies(df, columns=[\"DepartmentDescription\"], dummy_na=False)\n",
+    "    \n",
+    "    # we weight the department categories based on the scan count\n",
+    "    departments = list(df.columns)\n",
+    "    departments.remove(\"Weekday\")\n",
+    "    departments.remove(\"ScanCount\")\n",
+    "    departments.remove(\"FinelineNumber\")\n",
+    "    departments.remove(\"VisitNumber\")\n",
+    "    departments.remove(\"is_train_set\")\n",
+    "    #print (departments)\n",
+    "    df_g = df.copy()\n",
+    "    for dep in departments:\n",
+    "        df_g[dep] = df_g[dep] * df_g.ScanCount\n",
+    "    \n",
+    "    # now we add the groupby values\n",
+    "    df = df.groupby([\"VisitNumber\", \"Weekday\"], as_index=False).sum()\n",
+    "    df[\"Upc_median\"] = extra[\"Upc\"]\n",
+    "    \n",
+    "    # finally, we do one-hot encoding for the Weekday\n",
+    "    df = pd.get_dummies(df, columns=[\"Weekday\"], dummy_na=False)\n",
+    "    \n",
+    "    # get train and test back\n",
+    "    df_train = df[df.is_train_set != 0]\n",
+    "    df_test = df[df.is_train_set == 0]\n",
+    "    \n",
+    "    X = df_train.drop([\"is_train_set\"], axis=1)\n",
+    "    yy = None\n",
+    "    XX = df_test.drop([\"is_train_set\"], axis=1)\n",
+    "\n",
+    "    return X, y, XX, yy"
    ]
   },
   {
